# ZRobot_Next

./: .gitignore  README.md  main.py  setup.sh  zrobot_config.yaml
convert/: main.py  requirements.txt
install/: local_setup.sh  setup.sh
install/ldlidar_stl_ros2/lib/ldlidar_stl_ros2/: ldlidar_stl_ros2_node
install/ldlidar_stl_ros2/share/ldlidar_stl_ros2/: package.sh
install/web_interface/share/web_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zrobot_bringup/share/zrobot_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zrobot_control/share/zrobot_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zrobot_interfaces/share/zrobot_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zrobot_obstacle_avoidance/share/zrobot_obstacle_avoidance/: local_setup.sh  package.bash  package.dsv  package.ps1  (+2 more)
log/: latest_build
web_interface/: CMakeLists.txt  Cargo.toml  pyproject.toml
web_interface/src/: lib.rs  main.rs  web_server.py
web_interface/src/static/: index.html
zrobot_bringup/: CMakeLists.txt
zrobot_bringup/config/: zrobot_config.yaml
zrobot_bringup/launch/: zrobot_launch.py
zrobot_control/src/: motor_controller_node.cpp
zrobot_obstacle_avoidance/: CMakeLists.txt
zrobot_obstacle_avoidance/src/: obstacle_avoidance_node.py
zrobot_perception/: CMakeLists.txt  setup.cfg  setup.py
zrobot_perception/config/: yolo_detector.yaml
zrobot_perception/include/: colors.h  object_search.h  object_struct.h  yolo_detector.h
zrobot_perception/launch/: yolo_detector.launch.py
zrobot_perception/src/: object_search.cpp  yolo_detector.cpp  yolo_detector_node.cpp
zrobot_perception/src/rust_tracker/: Cargo.toml  pyproject.toml
zrobot_perception/src/rust_tracker/src/: iou_tracker.rs  kalman.rs  lib.rs
zrobot_perception/src/zrobot_perception/: __init__.py  botsort_tracker.py  ca_kalman_filter.py  iou_tracker.py  yolo_detector_node.py
(+64 files in other folders)
