[package]
name = "zrobot_web"
version = "0.1.0"
edition = "2024"

[lib]
name = "zrobot_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
base64 = "0.22"
futures-util = "0.3"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1